parser/parser.output
Terminals unused in grammar

    SUPER


State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: ε
    3           | statements statement

    4 statement: var_decl
    5          | print_stmt
    6          | return_stmt
    7          | if_stmt
    8          | while_stmt
    9          | for_stmt
   10          | expr_stmt
   11          | block
   12          | fun_decl
   13          | class_decl

   14 var_decl: VAR IDENTIFIER EQUAL expression SEMICOLON
   15         | VAR IDENTIFIER SEMICOLON

   16 print_stmt: PRINT expression SEMICOLON

   17 return_stmt: RETURN SEMICOLON
   18            | RETURN expression SEMICOLON

   19 if_stmt: IF LPAREN expression RPAREN statement
   20        | IF LPAREN expression RPAREN statement ELSE statement

   21 while_stmt: WHILE LPAREN expression RPAREN block

   22 for_stmt: FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_increment RPAREN block

   23 for_init: ε
   24         | var_decl_no_semicolon
   25         | expr_stmt_no_semicolon

   26 for_condition: ε
   27              | expression

   28 for_increment: ε
   29              | expression

   30 var_decl_no_semicolon: VAR IDENTIFIER EQUAL expression
   31                      | VAR IDENTIFIER

   32 expr_stmt_no_semicolon: expression

   33 expr_stmt: expression SEMICOLON

   34 $@1: ε

   35 $@2: ε

   36 fun_decl: FUN IDENTIFIER $@1 LPAREN $@2 params RPAREN block

   37 params: ε
   38       | IDENTIFIER
   39       | params COMMA IDENTIFIER

   40 $@3: ε

   41 class_decl: CLASS IDENTIFIER $@3 LBRACE method_declarations RBRACE

   42 method_declarations: ε
   43                    | method_declarations method_decl

   44 $@4: ε

   45 $@5: ε

   46 method_decl: IDENTIFIER $@4 LPAREN $@5 params RPAREN block

   47 expression: assignment

   48 assignment: call DOT IDENTIFIER EQUAL assignment
   49           | IDENTIFIER EQUAL assignment
   50           | logic_or

   51 logic_or: logic_and
   52         | logic_or OR logic_and

   53 logic_and: comparison
   54          | logic_and AND comparison

   55 comparison: addition
   56           | comparison GREATER addition
   57           | comparison GREATER_EQUAL addition
   58           | comparison LESS addition
   59           | comparison LESS_EQUAL addition
   60           | comparison EQUAL_EQUAL addition
   61           | comparison BANG_EQUAL addition

   62 addition: multiplication
   63         | addition PLUS multiplication
   64         | addition MINUS multiplication

   65 multiplication: unary
   66               | multiplication STAR unary
   67               | multiplication SLASH unary

   68 unary: call
   69      | BANG unary
   70      | MINUS unary

   71 call: primary
   72     | call LPAREN arguments RPAREN
   73     | call DOT IDENTIFIER

   74 primary: NUM
   75        | STRING
   76        | IDENTIFIER
   77        | TRUE
   78        | FALSE
   79        | NIL
   80        | THIS
   81        | LPAREN expression RPAREN

   82 arguments: ε
   83          | expression
   84          | arguments COMMA expression

   85 $@6: ε

   86 block: LBRACE $@6 statements RBRACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AND (258) 54
    OR (259) 52
    CLASS (260) 41
    ELSE (261) 20
    FALSE (262) 78
    FOR (263) 22
    FUN (264) 36
    IF (265) 19 20
    NIL (266) 79
    PRINT (267) 16
    RETURN (268) 17 18
    SUPER (269)
    THIS (270) 80
    TRUE (271) 77
    VAR (272) 14 15 30 31
    WHILE (273) 21
    EQUAL_EQUAL (274) 60
    EQUAL (275) 14 30 48 49
    BANG_EQUAL (276) 61
    BANG (277) 69
    LESS_EQUAL (278) 59
    LESS (279) 58
    GREATER_EQUAL (280) 57
    GREATER (281) 56
    LPAREN (282) 19 20 21 22 36 46 72 81
    RPAREN (283) 19 20 21 22 36 46 72 81
    LBRACE (284) 41 86
    RBRACE (285) 41 86
    COMMA (286) 39 84
    DOT (287) 48 73
    MINUS (288) 64 70
    PLUS (289) 63
    SEMICOLON (290) 14 15 16 17 18 22 33
    STAR (291) 66
    SLASH (292) 67
    NUM <number> (293) 74
    STRING <string> (294) 75
    IDENTIFIER <identifier> (295) 14 15 30 31 36 38 39 41 46 48 49 73 76


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program <no_ast> (42)
        on left: 1
        on right: 0
    statements <no_ast> (43)
        on left: 2 3
        on right: 1 3 86
    statement <no_ast> (44)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 3 19 20
    var_decl <no_ast> (45)
        on left: 14 15
        on right: 4
    print_stmt <no_ast> (46)
        on left: 16
        on right: 5
    return_stmt <no_ast> (47)
        on left: 17 18
        on right: 6
    if_stmt <no_ast> (48)
        on left: 19 20
        on right: 7
    while_stmt <no_ast> (49)
        on left: 21
        on right: 8
    for_stmt <no_ast> (50)
        on left: 22
        on right: 9
    for_init <no_ast> (51)
        on left: 23 24 25
        on right: 22
    for_condition <no_ast> (52)
        on left: 26 27
        on right: 22
    for_increment <no_ast> (53)
        on left: 28 29
        on right: 22
    var_decl_no_semicolon <no_ast> (54)
        on left: 30 31
        on right: 24
    expr_stmt_no_semicolon <no_ast> (55)
        on left: 32
        on right: 25
    expr_stmt <no_ast> (56)
        on left: 33
        on right: 10
    fun_decl <no_ast> (57)
        on left: 36
        on right: 12
    $@1 (58)
        on left: 34
        on right: 36
    $@2 (59)
        on left: 35
        on right: 36
    params <no_ast> (60)
        on left: 37 38 39
        on right: 36 39 46
    class_decl <no_ast> (61)
        on left: 41
        on right: 13
    $@3 (62)
        on left: 40
        on right: 41
    method_declarations <no_ast> (63)
        on left: 42 43
        on right: 41 43
    method_decl <no_ast> (64)
        on left: 46
        on right: 43
    $@4 (65)
        on left: 44
        on right: 46
    $@5 (66)
        on left: 45
        on right: 46
    expression <no_ast> (67)
        on left: 47
        on right: 14 16 18 19 20 21 27 29 30 32 33 81 83 84
    assignment <no_ast> (68)
        on left: 48 49 50
        on right: 47 48 49
    logic_or <no_ast> (69)
        on left: 51 52
        on right: 50 52
    logic_and <no_ast> (70)
        on left: 53 54
        on right: 51 52 54
    comparison <no_ast> (71)
        on left: 55 56 57 58 59 60 61
        on right: 53 54 56 57 58 59 60 61
    addition <no_ast> (72)
        on left: 62 63 64
        on right: 55 56 57 58 59 60 61 63 64
    multiplication <no_ast> (73)
        on left: 65 66 67
        on right: 62 63 64 66 67
    unary <no_ast> (74)
        on left: 68 69 70
        on right: 65 66 67 69 70
    call <no_ast> (75)
        on left: 71 72 73
        on right: 48 68 72 73
    primary <no_ast> (76)
        on left: 74 75 76 77 78 79 80 81
        on right: 71
    arguments <no_ast> (77)
        on left: 82 83 84
        on right: 72 84
    block <no_ast> (78)
        on left: 86
        on right: 11 21 22 36 46
    $@6 (79)
        on left: 85
        on right: 86


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: statements •
    3 statements: statements • statement

    CLASS       shift, and go to state 4
    FALSE       shift, and go to state 5
    FOR         shift, and go to state 6
    FUN         shift, and go to state 7
    IF          shift, and go to state 8
    NIL         shift, and go to state 9
    PRINT       shift, and go to state 10
    RETURN      shift, and go to state 11
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    VAR         shift, and go to state 14
    WHILE       shift, and go to state 15
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 1 (program)

    statement       go to state 23
    var_decl        go to state 24
    print_stmt      go to state 25
    return_stmt     go to state 26
    if_stmt         go to state 27
    while_stmt      go to state 28
    for_stmt        go to state 29
    expr_stmt       go to state 30
    fun_decl        go to state 31
    class_decl      go to state 32
    expression      go to state 33
    assignment      go to state 34
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42
    block           go to state 43


State 3

    0 $accept: program $end •

    $default  accept


State 4

   41 class_decl: CLASS • IDENTIFIER $@3 LBRACE method_declarations RBRACE

    IDENTIFIER  shift, and go to state 44


State 5

   78 primary: FALSE •

    $default  reduce using rule 78 (primary)


State 6

   22 for_stmt: FOR • LPAREN for_init SEMICOLON for_condition SEMICOLON for_increment RPAREN block

    LPAREN  shift, and go to state 45


State 7

   36 fun_decl: FUN • IDENTIFIER $@1 LPAREN $@2 params RPAREN block

    IDENTIFIER  shift, and go to state 46


State 8

   19 if_stmt: IF • LPAREN expression RPAREN statement
   20        | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 47


State 9

   79 primary: NIL •

    $default  reduce using rule 79 (primary)


State 10

   16 print_stmt: PRINT • expression SEMICOLON

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    expression      go to state 48
    assignment      go to state 34
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42


State 11

   17 return_stmt: RETURN • SEMICOLON
   18            | RETURN • expression SEMICOLON

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    SEMICOLON   shift, and go to state 49
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    expression      go to state 50
    assignment      go to state 34
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42


State 12

   80 primary: THIS •

    $default  reduce using rule 80 (primary)


State 13

   77 primary: TRUE •

    $default  reduce using rule 77 (primary)


State 14

   14 var_decl: VAR • IDENTIFIER EQUAL expression SEMICOLON
   15         | VAR • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 51


State 15

   21 while_stmt: WHILE • LPAREN expression RPAREN block

    LPAREN  shift, and go to state 52


State 16

   69 unary: BANG • unary

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    unary    go to state 54
    call     go to state 55
    primary  go to state 42


State 17

   81 primary: LPAREN • expression RPAREN

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    expression      go to state 56
    assignment      go to state 34
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42


State 18

   86 block: LBRACE • $@6 statements RBRACE

    $default  reduce using rule 85 ($@6)

    $@6  go to state 57


State 19

   70 unary: MINUS • unary

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    unary    go to state 58
    call     go to state 55
    primary  go to state 42


State 20

   74 primary: NUM •

    $default  reduce using rule 74 (primary)


State 21

   75 primary: STRING •

    $default  reduce using rule 75 (primary)


State 22

   49 assignment: IDENTIFIER • EQUAL assignment
   76 primary: IDENTIFIER •

    EQUAL  shift, and go to state 59

    $default  reduce using rule 76 (primary)


State 23

    3 statements: statements statement •

    $default  reduce using rule 3 (statements)


State 24

    4 statement: var_decl •

    $default  reduce using rule 4 (statement)


State 25

    5 statement: print_stmt •

    $default  reduce using rule 5 (statement)


State 26

    6 statement: return_stmt •

    $default  reduce using rule 6 (statement)


State 27

    7 statement: if_stmt •

    $default  reduce using rule 7 (statement)


State 28

    8 statement: while_stmt •

    $default  reduce using rule 8 (statement)


State 29

    9 statement: for_stmt •

    $default  reduce using rule 9 (statement)


State 30

   10 statement: expr_stmt •

    $default  reduce using rule 10 (statement)


State 31

   12 statement: fun_decl •

    $default  reduce using rule 12 (statement)


State 32

   13 statement: class_decl •

    $default  reduce using rule 13 (statement)


State 33

   33 expr_stmt: expression • SEMICOLON

    SEMICOLON  shift, and go to state 60


State 34

   47 expression: assignment •

    $default  reduce using rule 47 (expression)


State 35

   50 assignment: logic_or •
   52 logic_or: logic_or • OR logic_and

    OR  shift, and go to state 61

    $default  reduce using rule 50 (assignment)


State 36

   51 logic_or: logic_and •
   54 logic_and: logic_and • AND comparison

    AND  shift, and go to state 62

    $default  reduce using rule 51 (logic_or)


State 37

   53 logic_and: comparison •
   56 comparison: comparison • GREATER addition
   57           | comparison • GREATER_EQUAL addition
   58           | comparison • LESS addition
   59           | comparison • LESS_EQUAL addition
   60           | comparison • EQUAL_EQUAL addition
   61           | comparison • BANG_EQUAL addition

    EQUAL_EQUAL    shift, and go to state 63
    BANG_EQUAL     shift, and go to state 64
    LESS_EQUAL     shift, and go to state 65
    LESS           shift, and go to state 66
    GREATER_EQUAL  shift, and go to state 67
    GREATER        shift, and go to state 68

    $default  reduce using rule 53 (logic_and)


State 38

   55 comparison: addition •
   63 addition: addition • PLUS multiplication
   64         | addition • MINUS multiplication

    MINUS  shift, and go to state 69
    PLUS   shift, and go to state 70

    $default  reduce using rule 55 (comparison)


State 39

   62 addition: multiplication •
   66 multiplication: multiplication • STAR unary
   67               | multiplication • SLASH unary

    STAR   shift, and go to state 71
    SLASH  shift, and go to state 72

    $default  reduce using rule 62 (addition)


State 40

   65 multiplication: unary •

    $default  reduce using rule 65 (multiplication)


State 41

   48 assignment: call • DOT IDENTIFIER EQUAL assignment
   68 unary: call •
   72 call: call • LPAREN arguments RPAREN
   73     | call • DOT IDENTIFIER

    LPAREN  shift, and go to state 73
    DOT     shift, and go to state 74

    $default  reduce using rule 68 (unary)


State 42

   71 call: primary •

    $default  reduce using rule 71 (call)


State 43

   11 statement: block •

    $default  reduce using rule 11 (statement)


State 44

   41 class_decl: CLASS IDENTIFIER • $@3 LBRACE method_declarations RBRACE

    $default  reduce using rule 40 ($@3)

    $@3  go to state 75


State 45

   22 for_stmt: FOR LPAREN • for_init SEMICOLON for_condition SEMICOLON for_increment RPAREN block

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    VAR         shift, and go to state 76
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 23 (for_init)

    for_init                go to state 77
    var_decl_no_semicolon   go to state 78
    expr_stmt_no_semicolon  go to state 79
    expression              go to state 80
    assignment              go to state 34
    logic_or                go to state 35
    logic_and               go to state 36
    comparison              go to state 37
    addition                go to state 38
    multiplication          go to state 39
    unary                   go to state 40
    call                    go to state 41
    primary                 go to state 42


State 46

   36 fun_decl: FUN IDENTIFIER • $@1 LPAREN $@2 params RPAREN block

    $default  reduce using rule 34 ($@1)

    $@1  go to state 81


State 47

   19 if_stmt: IF LPAREN • expression RPAREN statement
   20        | IF LPAREN • expression RPAREN statement ELSE statement

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    expression      go to state 82
    assignment      go to state 34
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42


State 48

   16 print_stmt: PRINT expression • SEMICOLON

    SEMICOLON  shift, and go to state 83


State 49

   17 return_stmt: RETURN SEMICOLON •

    $default  reduce using rule 17 (return_stmt)


State 50

   18 return_stmt: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 51

   14 var_decl: VAR IDENTIFIER • EQUAL expression SEMICOLON
   15         | VAR IDENTIFIER • SEMICOLON

    EQUAL      shift, and go to state 85
    SEMICOLON  shift, and go to state 86


State 52

   21 while_stmt: WHILE LPAREN • expression RPAREN block

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    expression      go to state 87
    assignment      go to state 34
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42


State 53

   76 primary: IDENTIFIER •

    $default  reduce using rule 76 (primary)


State 54

   69 unary: BANG unary •

    $default  reduce using rule 69 (unary)


State 55

   68 unary: call •
   72 call: call • LPAREN arguments RPAREN
   73     | call • DOT IDENTIFIER

    LPAREN  shift, and go to state 73
    DOT     shift, and go to state 88

    $default  reduce using rule 68 (unary)


State 56

   81 primary: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 89


State 57

   86 block: LBRACE $@6 • statements RBRACE

    $default  reduce using rule 2 (statements)

    statements  go to state 90


State 58

   70 unary: MINUS unary •

    $default  reduce using rule 70 (unary)


State 59

   49 assignment: IDENTIFIER EQUAL • assignment

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    assignment      go to state 91
    logic_or        go to state 35
    logic_and       go to state 36
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 41
    primary         go to state 42


State 60

   33 expr_stmt: expression SEMICOLON •

    $default  reduce using rule 33 (expr_stmt)


State 61

   52 logic_or: logic_or OR • logic_and

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    logic_and       go to state 92
    comparison      go to state 37
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 62

   54 logic_and: logic_and AND • comparison

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    comparison      go to state 93
    addition        go to state 38
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 63

   60 comparison: comparison EQUAL_EQUAL • addition

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    addition        go to state 94
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 64

   61 comparison: comparison BANG_EQUAL • addition

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    addition        go to state 95
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 65

   59 comparison: comparison LESS_EQUAL • addition

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    addition        go to state 96
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 66

   58 comparison: comparison LESS • addition

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    addition        go to state 97
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 67

   57 comparison: comparison GREATER_EQUAL • addition

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53

    addition        go to state 98
    multiplication  go to state 39
    unary           go to state 40
    call            go to state 55
    primary         go to state 42


State 68

   56 comparison: comparison GREATER • addition

    FALSE       shift, and go to state 5
    NIL         shift, and go to state 9
    THIS        shift, and go to state 12
    TRUE        shift, and go to state 13
    BANG        shift, and go to state 16
    LPAREN      shift, and go to state 17
    MINUS       shift, and go to state 19
    NUM         shift, and go to state 20
    STRING      shift, and go to state 21
    IDENTIFIER  shift, and go to state 53
